--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@abckey/proto",
   "version": "0.4.0",
-  "description": "ABCKEY Protocol Buffers",
+  "description": "ABCKEY Protocol Buffers.",
   "author": "abckey <hi@abckey.com>",
   "license": "MIT",
   "main": "dist/index.js",
