--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@abckey/proto",
-  "version": "0.7.0",
+  "version": "0.0.2",
   "description": "ABCKEY Protocol Buffers.",
   "author": "abckey <hi@abckey.com>",
   "license": "MIT",
   "main": "dist/index.js",
   "scripts": {
-    "build": "pbjs -t json-module -w commonjs -o dist/index.js src/*.proto && pbjs -t static-module src/*.proto | pbts -o dist/index.d.ts -",
+    "build": "pbjs -t static-module -w commonjs --no-beautify --no-verify -o dist/index.js src/*.proto && pbts -o dist/index.d.ts dist/index.js",
     "prepare": "npm run build"
   },
   "repository": {
