--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "build:53c1": "pbjs -t json --keep-case src/0x53c1/*.proto > dist/0x53c1.json",
     "build:abc1": "pbjs -t json --keep-case src/0xabc1/*.proto > dist/0xabc1.json",
     "build": "npm run build:53c1 & npm run build:abc1",
+    "test:protobuf": "ava -v -m protobuf*",
     "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/abcKeyCOM/abckey-proto.git"
   },
-  "devDependencies": {},
-  "dependencies": {
-    "protobufjs": "^6.8.8"
+  "devDependencies": {
+    "@types/node": "^13.11.1",
+    "ava": "^3.7.0",
+    "protobufjs": "^6.8.8",
+    "rimraf": "^3.0.2",
+    "ts-node": "^8.8.2",
+    "typedoc": "^0.17.4",
+    "typescript": "^3.8.3",
+    "commitizen": "^4.1.2",
+    "conventional-changelog-cli": "^2.0.34",
+    "cz-conventional-changelog": "^3.2.0"
   },
+  "dependencies": {},
   "files": [
     "dist"
   ]
